syntax = "proto3";

import "google/protobuf/struct.proto";
import "dxos/error.proto";

package dxos.tracing;


//  dxos.error.Error error = 3;


message Resource {

  
  int32 id = 1;
  string class_name = 2;
  int32 instance_id = 3;

  google.protobuf.Struct info = 4;
  repeated ResourceLink links = 5;
}

message ResourceLink {
  int32 from = 1;
  int32 to = 2;
  google.protobuf.Struct attributes = 4;
}

message Span {
  int32 id = 1;
  optional int32 parent_id = 2;
  optional int32 resource_id = 3;
  string method_name = 4;

  // TODO(dmaretskyi): Figure out proper sub-millisecond timestamp type.
  string start_ts = 5;
  optional string end_ts = 6;

  optional dxos.error.Error error = 11;
}